--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -107,6 +107,8 @@ jobs:
           crane index append -t "$repo:$full_version-$suite" \
             -m "$repo:$full_version-$suite-loong64" \
             -m "golang:$full_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$major_version-$suite"
 
           case "$suite" in
             trixie)
@@ -115,15 +117,12 @@ jobs:
                 crane cp "$repo:$version-$suite" "$repo:$major_version"
               fi
               ;;
-            alpine3.21|alpine3.22)
-              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
-              if [ "$suite" = "alpine3.22" ]; then
-                crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
-                crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
-                if [ "$version" = "$latest_version" ]; then
-                  crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
-                  crane cp "$repo:$full_version-$suite" "$repo:alpine"
-                fi
+            alpine3.22)
+              crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
+              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
+              if [ "$version" = "$latest_version" ]; then
+                crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
+                crane cp "$repo:$full_version-$suite" "$repo:alpine"
               fi
               ;;
             *)
