--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -107,6 +107,13 @@ jobs:
           version="${{ matrix.version }}"
           latest_version="${{ matrix.latest_version }}"
 
+          crane cp "$repo:$full_version-$suite" "$repo:$full_version-$suite-loong64"
+          crane index append -t "$repo:$full_version-$suite" \
+            -m "$repo:$full_version-$suite-loong64" \
+            -m "node:$full_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$major_version-$suite"
+
           case "$suite" in
             trixie)
               if [ "$version" = "$latest_version" ]; then
@@ -114,20 +121,12 @@ jobs:
                 crane cp "$repo:$version-$suite" "$repo:$major_version"
               fi
               ;;
-            alpine3.21|alpine3.22)
-              crane cp "$repo:$full_version-$suite" "$repo:$full_version-$suite-loong64"
-              crane index append -t "$repo:$full_version-$suite" \
-                -m "$repo:$full_version-$suite-loong64" \
-                -m "node:$full_version-$suite"
-              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
-              crane cp "$repo:$full_version-$suite" "$repo:$major_version-$suite"
-              if [ "$suite" = "alpine3.22" ]; then
-                crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
-                crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
-                crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
-                if [ "$version" = "$latest_version" ]; then
-                  crane cp "$repo:$full_version-$suite" "$repo:alpine"
-                fi
+            alpine3.22)
+              crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
+              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
+              crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
+              if [ "$version" = "$latest_version" ]; then
+                crane cp "$repo:$full_version-$suite" "$repo:alpine"
               fi
               ;;
             *)
