--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -29,8 +29,8 @@ jobs:
       matrix:
         name: ['golang']
         suite: ['trixie', 'alpine3.21', 'alpine3.22']
-        version: ['1.23', '1.24', '1.25-rc']
-        latest_version: ['1.24']
+        version: ['1.24', '1.25']
+        latest_version: ['1.25']
 
     steps:
       - name: Checkout ${{ matrix.name }}
