--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -81,10 +81,7 @@ jobs:
           platforms: linux/loong64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.image_tag }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_image_tag }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.version }}-${{ matrix.suite }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}-${{ matrix.suite }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}-${{ matrix.suite }}-loong64
           outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -106,6 +103,12 @@ jobs:
           version="${{ matrix.version }}"
           latest_version="${{ matrix.latest_version }}"
 
+          crane index append -t "$repo:$full_version-$suite" \
+            -m "$repo:$full_version-$suite-loong64" \
+            -m "postgres:$full_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
+          crane cp "$repo:$full_version-$suite" "$repo:$major_version-$suite"
+
           case "$suite" in
             trixie)
               if [ "$version" = "$latest_version" ]; then
@@ -113,20 +116,12 @@ jobs:
                 crane cp "$repo:$version-$suite" "$repo:$major_version"
               fi
               ;;
-            alpine3.21|alpine3.22)
-              crane cp "$repo:$full_version-$suite" "$repo:$full_version-$suite-loong64"
-              crane index append -t "$repo:$full_version-$suite" \
-                -m "$repo:$full_version-$suite-loong64" \
-                -m "postgres:$full_version-$suite"
-              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
-              crane cp "$repo:$full_version-$suite" "$repo:$major_version-$suite"
-              if [ "$suite" = "alpine3.22" ]; then
-                crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
-                crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
-                if [ "$version" = "$latest_version" ]; then
-                  crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
-                  crane cp "$repo:$full_version-$suite" "$repo:alpine"
-                fi
+            alpine3.22)
+              crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine"
+              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
+              if [ "$version" = "$latest_version" ]; then
+                crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
+                crane cp "$repo:$full_version-$suite" "$repo:alpine"
               fi
               ;;
             *)
