--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         name: ['python']
         suite: ['trixie', 'slim-trixie', 'alpine3.21', 'alpine3.22']
-        version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+        version: ['3.10', '3.11', '3.12', '3.13', '3.14']
         latest_version: ['3.14']
 
     steps:
